Removed useless files, updated readme